trunk/Archive2/90/53c122f2319943/output

g++ (libstdc++) ######################################################################
Using built-in specs.
COLLECT_GCC=g++-4.9
COLLECT_LTO_WRAPPER=/usr/local/libexec/gcc/x86_64-unknown-linux-gnu/4.9.2/lto-wrapper
Target: x86_64-unknown-linux-gnu
Configured with: ./configure --disable-multilib
Thread model: posix
gcc version 4.9.2 (GCC) 
COLLECT_GCC_OPTIONS='-v' '-std=c++1y' '-O0' '-Wall' '-Wpedantic' '-pthread' '-shared-libgcc' '-mtune=generic' '-march=x86-64'
 /usr/local/libexec/gcc/x86_64-unknown-linux-gnu/4.9.2/cc1plus -quiet -v -imultiarch x86_64-linux-gnu -D_GNU_SOURCE -D_REENTRANT main.cpp -quiet -dumpbase main.cpp -mtune=generic -march=x86-64 -auxbase main -O0 -Wall -Wpedantic -std=c++1y -version -o /tmp/cc3aEsuw.s
GNU C++ (GCC) version 4.9.2 (x86_64-unknown-linux-gnu)
	compiled by GNU C version 4.9.2, GMP version 5.0.2, MPFR version 3.1.0-p3, MPC version 0.9
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
ignoring nonexistent directory "/usr/local/include/x86_64-linux-gnu"
ignoring nonexistent directory "/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../x86_64-unknown-linux-gnu/include"
#include "..." search starts here:
#include <...> search starts here:
 /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2
 /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/x86_64-unknown-linux-gnu
 /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/backward
 /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/include
 /usr/local/include
 /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/include-fixed
 /usr/include/x86_64-linux-gnu
 /usr/include
End of search list.
GNU C++ (GCC) version 4.9.2 (x86_64-unknown-linux-gnu)
	compiled by GNU C version 4.9.2, GMP version 5.0.2, MPFR version 3.1.0-p3, MPC version 0.9
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
Compiler executable checksum: d70edf565bd638f828d18b62f7b923ce
main.cpp: In instantiation of 'start(Args&& ...)::<lambda()> mutable::<lambda()> mutable [with Args = {Foo}]':
main.cpp:11:23:   required from 'struct start(Args&& ...)::<lambda()> mutable [with Args = {Foo}]::<lambda()>'
main.cpp:15:13:   required from 'start(Args&& ...)::<lambda()> mutable [with Args = {Foo}]'
main.cpp:10:65:   required from 'struct start(Args&& ...) [with Args = {Foo}]::<lambda()>'
main.cpp:16:5:   required from 'void start(Args&& ...) [with Args = {Foo}]'
main.cpp:21:16:   required from here
main.cpp:12:22: warning: variable 'z' set but not used [-Wunused-but-set-variable]
                 auto z = [] (Args&&... args) {
                      ^
main.cpp: In instantiation of 'start(Args&& ...)::<lambda()> mutable [with Args = {Foo}]':
main.cpp:10:65:   required from 'struct start(Args&& ...) [with Args = {Foo}]::<lambda()>'
main.cpp:16:5:   required from 'void start(Args&& ...) [with Args = {Foo}]'
main.cpp:21:16:   required from here
main.cpp:11:18: warning: variable 'y' set but not used [-Wunused-but-set-variable]
             auto y = [args] () mutable {
                  ^
main.cpp: In instantiation of 'void start(Args&& ...) [with Args = {Foo}]':
main.cpp:21:16:   required from here
main.cpp:10:10: warning: variable 'x' set but not used [-Wunused-but-set-variable]
     auto x = [args = std::make_tuple(std::forward<Args>(args)...)] () mutable {
          ^
COLLECT_GCC_OPTIONS='-v' '-std=c++1y' '-O0' '-Wall' '-Wpedantic' '-pthread' '-shared-libgcc' '-mtune=generic' '-march=x86-64'
 as -v --64 -o /tmp/ccLlOl5H.o /tmp/cc3aEsuw.s
GNU assembler version 2.22 (x86_64-linux-gnu) using BFD version (GNU Binutils for Ubuntu) 2.22
COMPILER_PATH=/usr/local/libexec/gcc/x86_64-unknown-linux-gnu/4.9.2/:/usr/local/libexec/gcc/x86_64-unknown-linux-gnu/4.9.2/:/usr/local/libexec/gcc/x86_64-unknown-linux-gnu/:/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/:/usr/local/lib/gcc/x86_64-unknown-linux-gnu/
LIBRARY_PATH=/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/:/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../lib64/:/lib/x86_64-linux-gnu/:/lib/../lib64/:/usr/lib/x86_64-linux-gnu/:/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../:/lib/:/usr/lib/
COLLECT_GCC_OPTIONS='-v' '-std=c++1y' '-O0' '-Wall' '-Wpedantic' '-pthread' '-shared-libgcc' '-mtune=generic' '-march=x86-64'
 /usr/local/libexec/gcc/x86_64-unknown-linux-gnu/4.9.2/collect2 --eh-frame-hdr -m elf_x86_64 -dynamic-linker /lib64/ld-linux-x86-64.so.2 /usr/lib/x86_64-linux-gnu/crt1.o /usr/lib/x86_64-linux-gnu/crti.o /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/crtbegin.o -L/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2 -L/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../lib64 -L/lib/x86_64-linux-gnu -L/lib/../lib64 -L/usr/lib/x86_64-linux-gnu -L/usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../.. /tmp/ccLlOl5H.o -lstdc++ -lm -lgcc_s -lgcc -lpthread -lc -lgcc_s -lgcc /usr/local/lib/gcc/x86_64-unknown-linux-gnu/4.9.2/crtend.o /usr/lib/x86_64-linux-gnu/crtn.o

clang++ (libc++) ######################################################################
main.cpp:10:57: error: variable 'args' cannot be implicitly captured in a lambda with no capture-default specified
    auto x = [args = std::make_tuple(std::forward<Args>(args)...)] () mutable {
                                                        ^
main.cpp:21:5: note: in instantiation of function template specialization 'start<Foo>' requested here
    start(Foo{});
    ^
main.cpp:9:22: note: 'args' declared here
void start(Args&&... args) {
                     ^
main.cpp:10:14: note: lambda expression begins here
    auto x = [args = std::make_tuple(std::forward<Args>(args)...)] () mutable {
             ^
main.cpp:12:22: warning: unused variable 'z' [-Wunused-variable]
                auto z = [] (Args&&... args) {
                     ^
main.cpp:11:18: warning: unused variable 'y' [-Wunused-variable]
            auto y = [args] () mutable {
                 ^
main.cpp:10:10: warning: unused variable 'x' [-Wunused-variable]
    auto x = [args = std::make_tuple(std::forward<Args>(args)...)] () mutable {
         ^
3 warnings and 1 error generated.
